--- a/src/components/InputForm/style.css
+++ b/src/components/InputForm/style.css
@@ -1,4 +1,4 @@
-.title {
+.inputForm {
     width: 100%;
     text-align: center;
     font-size: 3rem;
@@ -7,3 +7,21 @@
     margin-bottom: 50px;
   }
   
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
