--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -1,12 +1,14 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  height: 175px;
   margin: 1rem;
   position: relative;
   width: 325px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+  border-radius: 24px;
+  background-color: wheat;
 }
 
 .card > .img-container {
