--- a/src/components/SearchBy/style.css
+++ b/src/components/SearchBy/style.css
@@ -1,6 +1,5 @@
 .searchBy {
   width: 100%;
-  /* text-align: center; */
   font-size: 3rem;
   text-decoration: underline;
   color: #2A77AE;
@@ -34,11 +33,21 @@ span {
 }
 
 .searchBy {
-  text-align: left;
+  text-align: center;
   margin: 10px;
+  margin-top: 20px;
+  margin-bottom: 40px;
   padding: 0px;
 }
 
 h4 {
   font-size: 24px;
+}
+
+label {
+  color: white;
+}
+
+select {
+  background-color: wheat;
 }
