--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -1,24 +1,24 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 175px;
+  height: 450px;
   margin: 1rem;
   position: relative;
   width: 325px;
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  box-shadow: 0 3px 6px black, 0 3px 6px black;
   text-align: left;
   border-radius: 24px;
   background-color: wheat;
 }
 
 .card > .img-container {
-  height: 60%;
+  
   overflow: hidden;
   text-align: center;
   background:#6CADDC;
 }
 .card > .img-container > img {
-  width: 60%
+  width: 100%
 }
 
 .card > .content {
@@ -49,8 +49,15 @@
 }
 
 .img-container {
-  width: 100%;
-  height: 100%;
+  width: 323px;
+  height: 323px;
   display: flex;
   text-align: center;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+}
+
+img {
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
 }
