--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -4,4 +4,11 @@
     font-size: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: black solid 4px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 25%;
+    margin-right: 25%;
+    border-radius: 24px;
 }
