--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -1,3 +1,3 @@
 .search {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
