--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -3,7 +3,7 @@
     text-align: center;
     font-size: 50px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border: black solid 4px;
     padding-top: 20px;
@@ -11,4 +11,5 @@
     margin-left: 25%;
     margin-right: 25%;
     border-radius: 24px;
+    letter-spacing: 10px;
 }
